--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-    
+        <header>
+            <h1> Drew's To-Do list </h1> 
+        </header>
+        <form> 
+            <input type="text" class="todo-input">
+            <button class="todo-button" type="submit">
+        </form>
         
         <script src="app.js"></script>
     </body>
