--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
             <input type="text" class="todo-input">
             <button class="todo-button" type="submit">
         </form>
+          <div class="todo-container">
+            <ul class="todo-list">
+                <div class="todo">
+                    <li></li>
+                    <button></button>
+                </div>
+            </ul>
+          </div>
         
         <script src="app.js"></script>
     </body>
