--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <form> 
             <input type="text" class="todo-input">
             <button class="todo-button" type="submit">
+                <i class="fas fa-plus-square"></i>
         </form>
           <div class="todo-container">
             <ul class="todo-list">
