--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </head>
     <body>
         <header>
-            <h1> Drew's To-Do List </h1> 
+            <h1> Drew's To-Do list </h1> 
         </header>
         <form> 
-            <input type="text" class="todo-input">
+            <input type="text" class="todo-input"/>
             <button class="todo-button" type="submit">
                 <i class="fas fa-plus-square"></i>
             </button>
@@ -26,10 +26,10 @@
                 </select>
             </div>
         </form>
-          <div class="todo-container">
+        <div class="todo-container">
             <ul class="todo-list"></ul>
-          </div>
-        
+        </div>
+
         <script src="app.js"></script>
     </body>
 </html>
